syntax = "proto3";
package minter.v1;

import "minter/v1/attestation.proto";
// import "peggy/v1/types.proto";

option go_package = "github.com/althea-net/peggy/module/x/minter/types";

// OutgoingTxBatch represents a batch of transactions going from Peggy to ETH
message OutgoingTxBatch {
  uint64                      batch_nonce    = 1;
  uint64                      minter_nonce    = 2;
  repeated OutgoingTransferTx transactions   = 3;
}

// OutgoingTransferTx represents an individual send from Peggy to ETH
message OutgoingTransferTx {
  uint64     id           = 1;
  string     sender       = 2;
  string     dest_address = 3;
  MinterCoin minter_token  = 4;
}
